--- a/CNegocio/CNegocio.csproj
+++ b/CNegocio/CNegocio.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <Reference Include="MySql.Data">
-      <HintPath>..\..\NUEVA_APP\packages\MySql.Data.8.0.13\lib\net452\MySql.Data.dll</HintPath>
+      <HintPath>..\..\..\Visual Studio 2017\Projects\NUEVA_APP\packages\MySql.Data.8.0.13\lib\net452\MySql.Data.dll</HintPath>
     </Reference>
   </ItemGroup>
 
